Finalizo resumen del primer libro

--- a/lp01.md
+++ b/lp01.md
@@ -3,4 +3,7 @@
 
  EL niño huerfano **Larry** vive con sus tios , que lo tratan bastante mal (le hacen usar *Internet Explorer*).
 
-Tienes unas *Google Glasses* redondas y una cicatriz de un *USB* en la frente. 
+Tiene unas *Google Glasses* redondas y una cicatriz de un *USB* en la frente. 
+
+Un dia, aparece **Neo** , de *Matrix*, y le dice que el tambien puede ser un hacker.
+asi que lo saca de *Matrix* y le lleva a una escuela de hacking. 
