Finalizo, por tercera vez el resumen del primer libro actualizo el resumen del 2do

--- a/lp02.md
+++ b/lp02.md
@@ -3,3 +3,5 @@
 
 Desde que en *Matrix* Hubo un bug, la escuela se encuentra asediada por un virus
 contra el que **Larry** y sus amigos deberan luchar.
+
+en esta aventura, **Larry** se enterara de nuevos detalles sobre su destino
