--- a/lp01.md
+++ b/lp01.md
@@ -7,3 +7,5 @@ Tiene unas *Google Glasses* redondas y una cicatriz de un *USB* en la frente.
 
 Un dia, aparece **Neo** , de *Matrix*, y le dice que el tambien puede ser un hacker.
 asi que lo saca de *Matrix* y le lleva a una escuela de hacking. 
+
+Alli conoce a sus amigo **ROM** y **Version ** y vive sus primeras aventuras picando codigo.
