--- a/lp02.md
+++ b/lp02.md
@@ -5,3 +5,6 @@ Desde que en *Matrix* Hubo un bug, la escuela se encuentra asediada por un virus
 contra el que **Larry** y sus amigos deberan luchar.
 
 en esta aventura, **Larry** se enterara de nuevos detalles sobre su destino
+
+COmo el malvado hacker **Ballmermort** le metio un troyano,
+en su propio codigo.
