--- a/lp05.md
+++ b/lp05.md
@@ -2,4 +2,5 @@
 #Larry Plotter y La Orden de Unix
 
 El codigo de **Larry** cada vez se vuelve mas peligroso.
-**Lord Ballmermort** y sus *followers* tienen cada vez mas tweets. 
+**Lord Ballmermort** y sus *followers* tienen cada vez mas *retweets*.
+la Orden del Fenix luchara por el bien del mundo 
