--- a/lp07.md
+++ b/lp07.md
@@ -1,4 +1,5 @@
 #Larry Plotter y los commits de la muerte
 
-**Larry**, **ROM** y **Version** se lanzan a la busqueda de los *exploits* que **Ballmermort** necesita para vivir.
 
+**Larry**, **ROM** y **Version** se lanzan a la busqueda de los *exploits* que **Ballmermort** necesita para vivir.
+Destruyendo todos los **exploits** , Venceran a **Ballmermort**, pero el camino no sera porque sus portatiles no tienen mucha bateria.
