--- a/lp07.md
+++ b/lp07.md
@@ -1,4 +1,4 @@
 #Larry Plotter y los commits de la muerte
 
 Destruyendo todos los **exploits** , Venceran a **Ballmermort**, pero el camino no sera porque sus portatiles no tienen mucha bateria.
-
+**LArry** debera usar todos los conocimientos que ha adquirido para poder entregar el producto sin malware
