--- a/lp06.md
+++ b/lp06.md
@@ -1,3 +1,4 @@
 #Larry Plotter Y el Misterio del Hacker
 
 **Larry** descubre un libro de ensamblador y compiladores que pertenece a un misterioso *Hacker*
+A lo largo de la historia **Ballmermort** esta de todo el misterio
