--- a/lp06.md
+++ b/lp06.md
@@ -2,3 +2,4 @@
 
 **Larry** descubre un libro de ensamblador y compiladores que pertenece a un misterioso *Hacker*
 A lo largo de la historia **Ballmermort** esta de todo el misterio
+**Larry** y el director del colegio, encuentran una nueva forma de combatirle.
